[package]
name = "searchie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
fastembed = "4.3.0"
ollama-rs = "0.2.1"
poem = "3.1.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
small-world-rs = "1.1.1"
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio", "sqlite"] }
tokenizers = "0.21.0"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
